# ClaudeBot

./: .gitignore  CLAUDE.md  ClaudeBot-Watcher.ps1  Launch.ps1  README.md  START_MAC.md  START_WINDOWS.md  pyproject.toml  run_claudebot.bat  run_claudebot.ps1  run_claudebot_mac.command
docs/: index.html  styles.css
src/claudebot/: cli.py  monitor.py
